--- a/src/main/resources/templates/admin/listCategory.html
+++ b/src/main/resources/templates/admin/listCategory.html
@@ -23,6 +23,18 @@
             },
 
             methods: {
+                deleteBean: function(id){
+                  if(!checkDeleteLink())
+                      return;
+                  var url=vue.uri+'/'+id;
+                  axios.delete(url).then(function (response) {
+                      if(0!=response.data.length)
+                          alert(response.data)
+                      else
+                          vue.list(0);
+                  })
+                },
+
                 getFile: function (event) {
                     this.file = event.target.files[0];
                 },
