--- a/src/main/resources/templates/admin/listCategory.html
+++ b/src/main/resources/templates/admin/listCategory.html
@@ -8,8 +8,8 @@
     $(function(){
         var data4Vue = {
             uri:'categories',
-            pagination:{},
-            beans: [],
+            pagination:{},//存放分页信息
+            beans: [],//存放分页信息中的bean数据content
             bean:{id:0,name:''},//存放分类信息
             file:null  //上传的文件
         };
