--- a/src/main/resources/templates/include/admin/adminHeader.html
+++ b/src/main/resources/templates/include/admin/adminHeader.html
@@ -6,7 +6,10 @@
 	<script src="js/axios/0.17.1/axios.min.js"></script>
 	<script src="js/moment/2.22.2/moment.js"></script> <!-- vue.js 格式化日期用的 -->
 	<link href="css/back/style.css" rel="stylesheet">
-	
+
+	<link rel="stylesheet" type="text/css" href="assets/waifu.css"/>
+	<script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+
 	<script>
 	//判断是否为空
 	function checkEmpty(value,text){
